# Predictive-Vehicle-Maintenance-TechFest

./: .gitignore  README.md  features.py  inference_cloud_v2.py  knapsack.py  pricing.py  requirements.txt
backend/: pyproject.toml
backend-python/: requirements.txt
backend-python/app/: routes.py
backend-python/models/: inference.py
backend/src/pvmt/: main.py
backend/src/pvmt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/pvmt/app/: routes.py
backend/src/pvmt/ml/: features.py  inference.py
frontend-dashboard/src/: Dashboard.css  Dashboard.js  Home.css  Home.js
