[project]
name = "pvmt"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    # Core scientific / ML stack
    "joblib==1.5.2",
    "numpy==2.3.2",
    "pandas==2.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tzdata==2025.2",
    "xgboost==3.0.5",

    # Web frameworks
    "flask==3.1.2",
    "flask-cors==3.0.10",

    # Validation
    "pydantic==1.10.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
